--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,6 @@
 name: 'JSON schema compare'
 description: 'compare JSONs file to check if they have the same schema'
+author: 'Math-42'
 
 on: [push]
 
